# chatup

./: .gitignore  README.md  pyproject.toml  rxconfig.py
.web/: bun.lockb  package.json  reflex.install_frontend_packages.cached  reflex.json
.web/pages/: index.js
.web/utils/: context.js
chatup/: chatup.py  openai.py  state.py
